update personal page

--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -20,7 +20,7 @@ I am a member of <a href="http://www.dartmouth.edu/~dfr/" style="color:navy"> Da
 I have been a member of the <a href="https://orgsync.com/133396/chapter" style="color:navy"> Dartmouth Finance Society </a>  since fall of my freshman year. I was previously the Vice President of the currencies group (Winter 2018), Vice President of the equities group (Spring 2017), and Vice President of the fixed income group (Winter 2017).
 </li>
 <li>
-When visiting home, I enjoy playing tennis and bridge with my childhood friends. I went to Thomas Jefferson High School in Alexandria, VA. 
+I am from Herndon, Virginia. When visiting home, I enjoy playing tennis and bridge with my childhood friends. I went to Thomas Jefferson High School for Science and Technology in Alexandria, Virginia. 
 </li>
 </ul>
 <img src="/images/1.png" width="22%">
