--- a/_pages/personal.html
+++ b/_pages/personal.html
@@ -17,13 +17,13 @@ first </a> at club nationals this year in Knoxville!
 I am a member of <a href="http://www.dartmouth.edu/~dfr/" style="color:navy"> Dartmouth Formula Racing </a> (DFR). I’ve worked on and driven both our electric and hybrid racecars. 
 </li>
 <li>
-I have been a member of the <a href="https://orgsync.com/133396/chapter" style="color:navy"> Dartmouth Finance Society </a>  since fall of my freshman year. I was previously the Vice President of the currencies group (Winter 2018), Vice President of the equities group (Spring 2017), and Vice President of the fixed income group (Winter 2017).
+I'm affiliated with the Kappa Kappa Kappa (Tri-Kap) Fraternity at Dartmouth.
 </li>
 <li>
 I am from Herndon, Virginia. When visiting home, I enjoy playing tennis and bridge with my childhood friends. I went to Thomas Jefferson High School for Science and Technology in Alexandria, Virginia. 
 </li>
 <li>
-My favorite books are <a href="https://www.amazon.com/Mans-Search-Meaning-Viktor-Frankl/dp/080701429X/ref=sr_1_1?ie=UTF8&qid=1528338388&sr=8-1&keywords=mans+search+for+meaning&dpID=41C2r7-HbkL&preST=_SY291_BO1,204,203,200_QL40_&dpSrc=srch" style="color:navy"> Man's Search for Meaning </a> by Viktor Frankl, <a href="https://www.amazon.com/Catcher-Rye-J-D-Salinger/dp/0316769487/ref=sr_1_1?s=books&ie=UTF8&qid=1528338420&sr=1-1&keywords=catcher+in+the+rye&dpID=51EqnTkohBL&preST=_SY291_BO1,204,203,200_QL40_&dpSrc=srch" style="color:navy"> The Catcher in the Rye </a> by J.D. Salinger, and <a href="https://www.amazon.com/When-Breath-Becomes-Paul-Kalanithi/dp/081298840X/ref=sr_1_1?s=books&ie=UTF8&qid=1528338495&sr=1-1&keywords=when+breath+becomes+air&dpID=419tjDX5lJL&preST=_SY291_BO1,204,203,200_QL40_&dpSrc=srch" style="color:navy"> When Breath Becomes Air </a> by Paul Kalanithi. My favorite movies are <a href="https://en.wikipedia.org/wiki/The_Imitation_Game" style="color:navy"> The Imitation Game </a> and the Fast and Furious movies. I love the <a href="https://en.wikipedia.org/wiki/Sherlock_(TV_series)" style="color:navy"> Sherlock </a> TV Series and <a href="http://abc.go.com/shows/greys-anatomy" style="color:navy"> Grey's Anatomy</a>.
+My favorite books are <i>Man's Search for Meaning by Viktor Frankl</i>, <i>The Catcher in the Rye</i> by J.D. Salinger, and <i>When Breath Becomes Air</i> by Paul Kalanithi. My favorite movies are The Imitation Game and the Fast and Furious franchise. I love the Sherlock TV Series and Grey's Anatomy.
 </li>
 </ul>
 <img src="/images/1.png" width="22%">
