another small change

--- a/_pages/personal.html
+++ b/_pages/personal.html
@@ -23,7 +23,7 @@ I'm affiliated with the Kappa Kappa Kappa (Tri-Kap) Fraternity at Dartmouth.
 I am from Herndon, Virginia. When visiting home, I enjoy playing tennis and bridge with my childhood friends. I went to Thomas Jefferson High School for Science and Technology in Alexandria, Virginia. 
 </li>
 <li>
-My favorite books are <i>Man's Search for Meaning by Viktor Frankl</i>, <i>The Catcher in the Rye</i> by J.D. Salinger, and <i>When Breath Becomes Air</i> by Paul Kalanithi. My favorite movies are The Imitation Game and the Fast and Furious franchise. I love the Sherlock TV Series and Grey's Anatomy.
+My favorite books are <i>Man's Search for Meaning</i> by Viktor Frankl, <i>The Catcher in the Rye</i> by J.D. Salinger, and <i>When Breath Becomes Air</i> by Paul Kalanithi. My favorite movies are The Imitation Game and the Fast and Furious franchise. I love the Sherlock TV Series and Grey's Anatomy.
 </li>
 </ul>
 <img src="/images/1.png" width="22%">
