--- a/_pages/personal.html
+++ b/_pages/personal.html
@@ -36,8 +36,6 @@ My favorite books are <i>Man's Search for Meaning</i> by Viktor Frankl, <i>The C
 
 
 <h1> Blog Posts </h1>
-
-
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
 {% for post in site.posts %}
@@ -48,4 +46,30 @@ My favorite books are <i>Man's Search for Meaning</i> by Viktor Frankl, <i>The C
   {% endif %}
   {% include archive-single.html %}
 {% endfor %}
+
+Places I've Been:
+<ul>
+	<li> Australia and New Zealand (June 11-17, 2018)
+		<ul>
+		<li>Sydney Opera House, Mr. Wong's Restaurant, Baxter's Inn (Jun 11-12)</li>
+		<li>Melbourne, Great Ocean Road, 12 Apostles (Jun 13-14)</li>
+		<li>Auckland Sky Tower, Mount Victoria (Jun 15)</li>
+		<li>Rotorua, Polynesian Spa, Wai-o-tapu (Jun 16-17)</li>
+		</ul>
+	</li>
+	<li> Iceland (December 1-9, 2017)
+		<ul>
+		<li>Reykjavik, Blue Lagoon (Dec 2)</li>
+		<li>Þingvellir National Park, Bruarfoss (Dec 3)</li>
+		<li>Gullfoss, Northern Lights at Laugarvatn Fontana geothermal baths (Dec 4)</li>
+		<li>Vik, Reynisfjara black sand beach (Dec 5)</li>
+		<li>Jökulsárlón glacier lagoon, Stokksnes (Dec 6)</li>
+		<li>Vatnajökull Ice Caves (Dec 7)</li>
+		</ul>
+	</li>
+</ul>
+
+
+
+
 
