small changes to personal

--- a/_pages/personal.html
+++ b/_pages/personal.html
@@ -46,24 +46,29 @@ My favorite books are <i>Man's Search for Meaning</i> by Viktor Frankl, <i>The C
   {% endif %}
   {% include archive-single.html %}
 {% endfor %}
-
-Places I've Been:
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+<h1>Places I've Been</h1>
 <ul>
 	<li> Australia and New Zealand (June 11-17, 2018)
 		<ul>
-		<li>Sydney Opera House, Mr. Wong's Restaurant, Baxter's Inn (Jun 11-12)</li>
-		<li>Melbourne, Great Ocean Road, 12 Apostles (Jun 13-14)</li>
+		<li>Sydney Opera House, Mr. Wong's Restaurant, <b>Baxter's Inn</b> (Jun 11-12)</li>
+		<li>Melbourne, Great Ocean Road, <b>12 Apostles</b> (Jun 13-14)</li>
 		<li>Auckland Sky Tower, Mount Victoria (Jun 15)</li>
-		<li>Rotorua, Polynesian Spa, Wai-o-tapu (Jun 16-17)</li>
+		<li>Rotorua, <b>Polynesian Spa</b>, Wai-o-tapu (Jun 16-17)</li>
 		</ul>
 	</li>
 	<li> Iceland (December 1-9, 2017)
 		<ul>
-		<li>Reykjavik, Blue Lagoon (Dec 2)</li>
+		<li>Reykjavik, <b>Blue Lagoon</b> (Dec 2)</li>
 		<li>Þingvellir National Park, Bruarfoss (Dec 3)</li>
-		<li>Gullfoss, Northern Lights at Laugarvatn Fontana geothermal baths (Dec 4)</li>
-		<li>Vik, Reynisfjara black sand beach (Dec 5)</li>
-		<li>Jökulsárlón glacier lagoon, Stokksnes (Dec 6)</li>
+		<li><b>Gullfoss</b>, Northern Lights at <b>Laugarvatn Fontana Geothermal Baths</b> (Dec 4)</li>
+		<li>Vik, Reynisfjara Black Sand Beach (Dec 5)</li>
+		<li>Jökulsárlón Glacier Lagoon, Stokksnes (Dec 6)</li>
 		<li>Vatnajökull Ice Caves (Dec 7)</li>
 		</ul>
 	</li>
