--- a/_pages/personal.html
+++ b/_pages/personal.html
@@ -49,11 +49,13 @@ My favorite books are <i>Man's Search for Meaning</i> by Viktor Frankl, <i>The C
 </br>
 </br>
 </br>
-</br>
-</br>
-</br>
 <h1>Places I've Been</h1>
 <ul>
+	<li> Europe (Aug 26 - Dec 15, 2018)
+		<ul>
+		<li>Denmark: Copenhagen (Aug 26 - Dec 15) </li>
+		</ul>
+	</li>
 	<li> Australia and New Zealand (June 11-17, 2018)
 		<ul>
 		<li>Sydney Opera House, Mr. Wong's Restaurant, <b>Baxter's Inn</b> (Jun 11-12)</li>
