--- a/_pages/personal.html
+++ b/_pages/personal.html
@@ -23,10 +23,10 @@ My favorite books are <i>Man's Search for Meaning</i> by Viktor Frankl, <i>The C
 I am from Herndon, Virginia. When visiting home, I enjoy playing tennis and poker with my childhood friends. I went to Thomas Jefferson High School for Science and Technology (TJHSST) in Alexandria, Virginia. 
 </li>
 </ul>
-<img src="/images/personal_1.png" width="22%">
-<img src="/images/personal_2.png" width="22%">
-<img src="/images/personal_3.png" width="22%">
-<img src="/images/personal_4.png" width="22%">
+<img src="/images/personal_1.jpg" width="22%">
+<img src="/images/personal_2.jpg" width="22%">
+<img src="/images/personal_3.jpg" width="22%">
+<img src="/images/personal_4.jpg" width="22%">
 </br>
 </br>
 </br>
@@ -43,7 +43,6 @@ I am from Herndon, Virginia. When visiting home, I enjoy playing tennis and poke
   {% endif %}
   {% include archive-single.html %}
 {% endfor %}
-</br>
 </br>
 
 
@@ -64,9 +63,9 @@ I am from Herndon, Virginia. When visiting home, I enjoy playing tennis and poke
 		<li>Rotorua, <b>Polynesian Spa</b>, Wai-o-tapu (Jun 16-17)</li>
 		</ul>
 	</li>
-	<img src="/images/personal_anz_1.png" width="29%">
-	<img src="/images/personal_anz_2.png" width="29%">
-	<img src="/images/personal_anz_3.png" width="29%">
+	<img src="/images/personal_anz_1.jpg" width="29%">
+	<img src="/images/personal_anz_2.jpg" width="29%">
+	<img src="/images/personal_anz_3.jpg" width="29%">
 	<li> Iceland (December 1-9, 2017)
 		<ul>
 		<li>Reykjavik, <b>Blue Lagoon</b> (Dec 2)</li>
@@ -77,9 +76,9 @@ I am from Herndon, Virginia. When visiting home, I enjoy playing tennis and poke
 		<li>Vatnajökull Ice Caves (Dec 7)</li>
 		</ul>
 	</li>
-	<img src="/images/personal_iceland_1.png" width="29%">
-	<img src="/images/personal_iceland_2.png" width="29%">
-	<img src="/images/personal_iceland_3.png" width="29%">
+	<img src="/images/personal_iceland_1.jpg" width="29%">
+	<img src="/images/personal_iceland_2.jpg" width="29%">
+	<img src="/images/personal_iceland_3.jpg" width="29%">
 </ul>
 
 
