add venice stuff

--- a/_pages/personal.html
+++ b/_pages/personal.html
@@ -50,7 +50,8 @@ I am from Herndon, Virginia. When visiting home, I enjoy playing tennis and poke
 <ul>
 	<li> Europe (Aug 26 - Dec 15, 2018)
 		<ul>
-		<li>Croatia: Zagreb, Plitvice Lakes National Park (Sep 22-25) </li>	
+		<li>Italy: Venice, Murano, Doge's Palace (Sep 29 - Oct 2) </li>
+		<li>Croatia: Zagreb, Plitvice Lakes National Park (Sep 22-25) </li>
 		<li>Denmark: Copenhagen, Technical University of Denmark, Kokkedal, Nyhavn, Christiania (Aug 26 - Dec 15) </li>
 		<li>Denmark: Møns Klint, Klintholm Havn (Sep 16) </li>
 		</ul>
@@ -74,11 +75,12 @@ I am from Herndon, Virginia. When visiting home, I enjoy playing tennis and poke
 		</ul>
 	</li>
 	</br>
+	<img src="/images/personal_venice_1.jpg" width="29%">
+	<img src="/images/personal_venice_2.jpg" width="29%">
+	<img src="/images/personal_venice_3.jpg" width="29%">
 	<img src="/images/personal_anz_1.jpg" width="29%">
 	<img src="/images/personal_anz_2.jpg" width="29%">
 	<img src="/images/personal_anz_3.jpg" width="29%">
-	</br>
-	</br>
 	<img src="/images/personal_iceland_1.jpg" width="29%">
 	<img src="/images/personal_iceland_2.jpg" width="29%">
 	<img src="/images/personal_iceland_3.jpg" width="29%">
