--- a/_pages/personal.html
+++ b/_pages/personal.html
@@ -50,6 +50,8 @@ I am from Herndon, Virginia. When visiting home, I enjoy playing tennis and poke
 <ul>
 	<li> Europe (Aug 26 - Dec 15, 2018)
 		<ul>
+		<li>Netherlands: Amsterdam, Zaanse Schans, Van Gogh Museum, Holland Casino (Oct 26-29) </li>
+		<li>Germany: Munich, Oktoberfest, Neuschwanstein Castle, Linderhof Palace (Oct 5-8) </li>
 		<li>Italy: Venice, Murano, Doge's Palace (Sep 29 - Oct 2) </li>
 		<li>Croatia: Zagreb, Plitvice Lakes National Park (Sep 22-25) </li>
 		<li>Denmark: Copenhagen, Technical University of Denmark, Kokkedal, Nyhavn, Christiania (Aug 26 - Dec 15) </li>
