--- a/_pages/personal.html
+++ b/_pages/personal.html
@@ -7,6 +7,7 @@ redirect_from:
   - /wordpress/blog-posts/
 ---
 
+This is my personal page. Read at your own risk.
 
 <ul>
 <li>
@@ -17,10 +18,10 @@ first </a> at club nationals this year in Knoxville!
 I am a member of the Kappa Kappa Kappa Fraternity <a href="http://www.tri-kap.com/" style="color:navy">(Tri-Kap)</a> at Dartmouth. 
 </li>
 <li>
-My favorite books are <i>Man's Search for Meaning</i> by Viktor Frankl, <i>The Catcher in the Rye</i> by J.D. Salinger, and <i>When Breath Becomes Air</i> by Paul Kalanithi. My favorite movies are The Imitation Game and the Fast and Furious franchise. I love the Sherlock TV Series and Grey's Anatomy.
+I am from Herndon, Virginia. When visiting home, I enjoy playing tennis and poker with my childhood friends. I went to Thomas Jefferson High School for Science and Technology (TJHSST) in Alexandria, Virginia. 
 </li>
 <li>
-I am from Herndon, Virginia. When visiting home, I enjoy playing tennis and poker with my childhood friends. I went to Thomas Jefferson High School for Science and Technology (TJHSST) in Alexandria, Virginia. 
+My favorite books are <i>Man's Search for Meaning</i> by Viktor Frankl, <i>The Catcher in the Rye</i> by J.D. Salinger, and <i>When Breath Becomes Air</i> by Paul Kalanithi. My favorite movies are The Imitation Game and the Fast and Furious franchise. I love the Sherlock TV Series and Grey's Anatomy.
 </li>
 </ul>
 <img src="/images/personal_1.jpg" width="22%">
@@ -50,6 +51,8 @@ I am from Herndon, Virginia. When visiting home, I enjoy playing tennis and poke
 <ul>
 	<li> Europe (Aug 26 - Dec 15, 2018)
 		<ul>
+		<li>London (Nov 24-26): British Museum, Victoria's Casino </li>
+		<li>France and Monaco (Nov 9-12): Nice, Monte Carlo, Monte Carlo Casino, Casino Barrière de Nice </li>
 		<li>Netherlands: Amsterdam, Zaanse Schans, Van Gogh Museum, Holland Casino (Oct 26-29) </li>
 		<li>Germany: Munich, Oktoberfest, Neuschwanstein Castle, Linderhof Palace (Oct 5-8) </li>
 		<li>Italy: Venice, Murano, Doge's Palace (Sep 29 - Oct 2) </li>
