--- a/_pages/personal.html
+++ b/_pages/personal.html
@@ -77,9 +77,9 @@ My favorite books are <i>Man's Search for Meaning</i> by Viktor Frankl, <i>The C
 		</ul>
 	</li>
 	</br>
-	<img src="/images/personal_venice_2.jpg" width="29%">
+	<!-- <img src="/images/personal_venice_2.jpg" width="29%">
 	<img src="/images/personal_venice_3.jpg" width="29%">
-	<img src="/images/personal_venice_1.jpg" width="29%">
+	<img src="/images/personal_venice_1.jpg" width="29%"> -->
 	<img src="/images/personal_anz_1.jpg" width="29%">
 	<img src="/images/personal_anz_2.jpg" width="29%">
 	<img src="/images/personal_anz_3.jpg" width="29%">
