--- a/_pages/personal.html
+++ b/_pages/personal.html
@@ -30,6 +30,7 @@ My favorite books are <i>Man's Search for Meaning</i> by Viktor Frankl, <i>The C
 
 
 <h1>Blog Posts</h1>
+Blog posts about my life, partially inspired by John Watson's blog from the Sherlock Holmes stories.
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
 {% for post in site.posts %}
@@ -47,13 +48,15 @@ My favorite books are <i>Man's Search for Meaning</i> by Viktor Frankl, <i>The C
 <ul>
 	<li> Europe (Aug 26 - Dec 15, 2018)
 		<ul>
-		<li>England: London, British Museum, <b>Victoria's Casino</b> (Nov 24-26)</li>
-		<li>France: Nice, Casino Barrière de Nice (Nov 9-12) </li>
+		<li>Lithuania: Vilnius, Vilnius Old Town; Klaipeda, Neringa, Nida Sand Dunes </li>
+		<li>Turkey: Istanbul, Hagia Sophia, Grand Bazaar, Blue Mosque, Bosphorus Straight (Nov 30 - Dec 3) </li>
+		<li>England: London, Hampstead Heath, British Museum, <b>Victoria's Casino</b> (Nov 24-26)</li>
+		<li>France: Nice, Promenade des Anglais, Castle of Nice, Casino Barrière de Nice (Nov 9-12) </li>
 		<li>Monaco: Monte Carlo, Monte Carlo Casino (Nov 9) </li>
-		<li>Netherlands: Amsterdam, Zaanse Schans, Van Gogh Museum, Holland Casino (Oct 26-29) </li>
-		<li>Germany: Munich, Oktoberfest, Neuschwanstein Castle, Linderhof Palace (Oct 5-8) </li>
+		<li>Netherlands: Amsterdam, Van Gogh Museum, Holland Casino; Zaanse Schans (Oct 26-29) </li>
+		<li>Germany: Munich, Oktoberfest; Neuschwanstein Castle, Linderhof Palace (Oct 5-8) </li>
 		<li>Italy: Venice, Murano, Doge's Palace (Sep 29 - Oct 2) </li>
-		<li>Croatia: Zagreb, Plitvice Lakes National Park (Sep 22-25) </li>
+		<li>Croatia: Zagreb; Plitvice Lakes National Park (Sep 22-25) </li>
 		<li>Denmark: Møns Klint, Klintholm Havn (Sep 16) </li>
 		<li>Denmark: Copenhagen, Technical University of Denmark, Kokkedal, Nyhavn, Christiania (Aug 26 - Dec 15) </li>
 		</ul>
@@ -77,9 +80,6 @@ My favorite books are <i>Man's Search for Meaning</i> by Viktor Frankl, <i>The C
 		</ul>
 	</li>
 	</br>
-	<!-- <img src="/images/personal_venice_2.jpg" width="29%">
-	<img src="/images/personal_venice_3.jpg" width="29%">
-	<img src="/images/personal_venice_1.jpg" width="29%"> -->
 	<img src="/images/personal_anz_1.jpg" width="29%">
 	<img src="/images/personal_anz_2.jpg" width="29%">
 	<img src="/images/personal_anz_3.jpg" width="29%">
