--- a/_pages/personal.html
+++ b/_pages/personal.html
@@ -48,7 +48,7 @@ Blog posts about my life, partially inspired by John Watson's blog from the Sher
 <ul>
 	<li> Europe (Aug 26 - Dec 15, 2018)
 		<ul>
-		<li>Lithuania: Vilnius, Vilnius Old Town; Klaipeda, Neringa, Nida Sand Dunes </li>
+		<li>Lithuania: <b>Vilnius</b>, Vilnius Old Town; Klaipeda, Neringa, Nida Sand Dunes (Dec 3-6) </li>
 		<li>Turkey: Istanbul, Hagia Sophia, Grand Bazaar, Blue Mosque, Bosphorus Straight (Nov 30 - Dec 3) </li>
 		<li>England: London, Hampstead Heath, British Museum, <b>Victoria's Casino</b> (Nov 24-26)</li>
 		<li>France: Nice, Promenade des Anglais, Castle of Nice, Casino Barrière de Nice (Nov 9-12) </li>
