--- a/_pages/personal.html
+++ b/_pages/personal.html
@@ -46,6 +46,14 @@ Blog posts about my life, partially inspired by John Watson's blog from the Sher
 
 <h1>Places I've Been</h1>
 <ul>
+	<li> Arizona (Dec 20-25, 2018)
+		<ul>
+		<li>Vermillion Cliffs (Dec 24)</li>
+		<li>Antelope Canyon (Dec 23)</li>
+		<li>Horseshoe Bend (Dec 22)</li>
+		<li>Grand Canyon (Dec 21)</li>
+		</ul>
+	</li>
 	<li> Europe (Aug 26 - Dec 15, 2018)
 		<ul>
 		<li>Lithuania: <b>Vilnius</b>, Vilnius Old Town; Klaipeda, Neringa, Nida Sand Dunes (Dec 3-6) </li>
@@ -80,6 +88,12 @@ Blog posts about my life, partially inspired by John Watson's blog from the Sher
 		</ul>
 	</li>
 	</br>
+	<img src="/images/grand_canyon.jpg" width="29%">
+	<img src="/images/antelope_canyon.jpg" width="29%">
+	<img src="/images/horseshoe_bend.jpg" width="29%">
+	<img src="/images/dtu/hagia.jpg" width="29%">
+	<img src="/images/dtu/venice_gondola.jpg" width="29%">
+	<img src="/images/dtu/vilnius.jpg" width="29%">
 	<img src="/images/personal_anz_1.jpg" width="29%">
 	<img src="/images/personal_anz_2.jpg" width="29%">
 	<img src="/images/personal_anz_3.jpg" width="29%">
