--- a/_pages/personal.html
+++ b/_pages/personal.html
@@ -103,6 +103,6 @@ Blog posts about my life, partially inspired by John Watson's blog from the Sher
 </ul>
 
 
-A <a href="https://jasonwei20.github.io/life/" style="color:navy">list</a> of my most transformative, memorable, or fun experiences. 
+A <a href="https://jasonwei20.github.io/life_experiences/" style="color:navy">list</a> of my most transformative, memorable, or fun experiences. 
 
 
