--- a/_pages/personal.html
+++ b/_pages/personal.html
@@ -46,6 +46,13 @@ Blog posts about my life, partially inspired by John Watson's blog from the Sher
 
 <h1>Places I've Been</h1>
 <ul>
+	<li> San Francisco (Jun 23 - Sep 13, 2019)
+		<ul>
+		<li>Fisherman's Wharf (July 4)</li>
+		<li>Muir Woods (June 29)</li>
+		<li>Kabuki Springs and Spa (June 28)</li>
+		</ul>
+	</li>
 	<li> Louisiana (May 5-9, 2019)
 		<ul>
 		<li>New Orleans (May 5-9)</li>
