--- a/_pages/personal.html
+++ b/_pages/personal.html
@@ -46,7 +46,12 @@ Blog posts about my life, partially inspired by John Watson's blog from the Sher
 
 <h1>Places I've Been</h1>
 <ul>
-	<li> San Francisco (Jun 23 - Sep 13, 2019)
+	<li> Seattle (Sep 18-19) 
+		<ul>
+		<li>Bellevue</li>
+		</ul>
+	</li>
+	<li> San Francisco (Jun 23 - Sep 15, 2019)
 		<ul>
 		<li>Yosemite National Park (July 20)</li>
 		<li>Marin (July 15)</li>
