--- a/_pages/personal.html
+++ b/_pages/personal.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 permalink: /personal/
-title: ""
+title: "About Me"
 author_profile: true
 redirect_from:
   - /wordpress/blog-posts/
