change places i've been

--- a/_pages/personal.html
+++ b/_pages/personal.html
@@ -32,6 +32,13 @@ My favorite books are <i>Man's Search for Meaning</i> by Viktor Frankl, <i>The C
 </br>
 </br>
 
+<a href="https://jasonwei20.github.io/places_ive_been/" style="color:navy">Places</a> I've been to. 
+
+A <a href="https://jasonwei20.github.io/life_experiences/" style="color:navy">list</a> of my most transformative, memorable, or fun experiences. </br>
+
+</br>
+</br>
+</br>
 
 <h1>Blog Posts</h1>
 Blog posts about my life, partially inspired by John Watson's blog from the Sherlock Holmes stories.
@@ -47,90 +54,19 @@ Blog posts about my life, partially inspired by John Watson's blog from the Sher
 {% endfor %}
 </br>
 
-
-<h1>Places I've Been</h1>
-<ul>
-	<li> Seattle (Sep 18-19) 
-		<ul>
-		<li>Bellevue</li>
-		</ul>
-	</li>
-	<li> San Francisco (Jun 23 - Sep 15, 2019)
-		<ul>
-		<li>Yosemite National Park (July 20)</li>
-		<li>Marin (July 15)</li>
-		<li>Fisherman's Wharf (July 4)</li>
-		<li>Muir Woods (June 29)</li>
-		<li>Kabuki Springs and Spa (June 28)</li>
-		</ul>
-	</li>
-	<li> Louisiana (May 5-9, 2019)
-		<ul>
-		<li>New Orleans (May 5-9)</li>
-		</ul>
-	</li>
-	<li> Canada (Apr 26-28, 2019)
-		<ul>
-		<li>Montreal (Apr 26-28)</li>
-		</ul>
-	</li>
-	<li> Arizona (Dec 20-25, 2018)
-		<ul>
-		<li>Vermillion Cliffs (Dec 24)</li>
-		<li>Antelope Canyon (Dec 23)</li>
-		<li>Horseshoe Bend (Dec 22)</li>
-		<li>Grand Canyon (Dec 21)</li>
-		</ul>
-	</li>
-	<li> Europe (Aug 26 - Dec 15, 2018)
-		<ul>
-		<li>Lithuania: <b>Vilnius</b>, Vilnius Old Town; Klaipeda, Neringa, Nida Sand Dunes (Dec 3-6) </li>
-		<li>Turkey: Istanbul, Hagia Sophia, Grand Bazaar, Blue Mosque, Bosphorus Straight (Nov 30 - Dec 3) </li>
-		<li>England: London, Hampstead Heath, British Museum, <b>Victoria's Casino</b> (Nov 24-26)</li>
-		<li>France: Nice, Promenade des Anglais, Castle of Nice, Casino Barrière de Nice (Nov 9-12) </li>
-		<li>Monaco: Monte Carlo, Monte Carlo Casino (Nov 9) </li>
-		<li>Netherlands: Amsterdam, Van Gogh Museum, Holland Casino; Zaanse Schans (Oct 26-29) </li>
-		<li>Germany: Munich, Oktoberfest; Neuschwanstein Castle, Linderhof Palace (Oct 5-8) </li>
-		<li>Italy: Venice, Murano, Doge's Palace (Sep 29 - Oct 2) </li>
-		<li>Croatia: Zagreb; Plitvice Lakes National Park (Sep 22-25) </li>
-		<li>Denmark: Møns Klint, Klintholm Havn (Sep 16) </li>
-		<li>Denmark: Copenhagen, Technical University of Denmark, Kokkedal, Nyhavn, Christiania (Aug 26 - Dec 15) </li>
-		</ul>
-	</li>
-	<li> Australia and New Zealand (June 11-17, 2018)
-		<ul>
-		<li>Rotorua, <b>Polynesian Spa</b>, Wai-o-tapu (Jun 16-17)</li>
-		<li>Auckland Sky Tower, Mount Victoria (Jun 15)</li>
-		<li>Melbourne, Great Ocean Road, <b>12 Apostles</b> (Jun 13-14)</li>
-		<li>Sydney Opera House, Mr. Wong's Restaurant, <b>Baxter's Inn</b> (Jun 11-12)</li>
-		</ul>
-	</li>
-	<li> Iceland (December 1-9, 2017)
-		<ul>
-		<li>Vatnajökull Ice Caves (Dec 7)</li>
-		<li>Jökulsárlón Glacier Lagoon, Stokksnes (Dec 6)</li>
-		<li>Vik, Reynisfjara Black Sand Beach (Dec 5)</li>
-		<li><b>Gullfoss</b>, Northern Lights at <b>Laugarvatn Fontana Geothermal Baths</b> (Dec 4)</li>
-		<li>Þingvellir National Park, Bruarfoss (Dec 3)</li>
-		<li>Reykjavik, <b>Blue Lagoon</b> (Dec 2)</li>
-		</ul>
-	</li>
-	</br>
-	<img src="/images/grand_canyon.jpg" width="29%">
-	<img src="/images/antelope_canyon.jpg" width="29%">
-	<img src="/images/horseshoe_bend.jpg" width="29%">
-	<img src="/images/dtu/venice_gondola.jpg" width="29%">
-	<img src="/images/dtu/vilnius.jpg" width="29%">
-	<img src="/images/dtu/hagia.jpg" width="29%">
-	<img src="/images/personal_anz_1.jpg" width="29%">
-	<img src="/images/personal_anz_2.jpg" width="29%">
-	<img src="/images/personal_anz_3.jpg" width="29%">
-	<img src="/images/personal_iceland_1.jpg" width="29%">
-	<img src="/images/personal_iceland_2.jpg" width="29%">
-	<img src="/images/personal_iceland_3.jpg" width="29%">
-</ul>
+<img src="/images/grand_canyon.jpg" width="29%">
+<img src="/images/antelope_canyon.jpg" width="29%">
+<img src="/images/horseshoe_bend.jpg" width="29%">
+<img src="/images/dtu/venice_gondola.jpg" width="29%">
+<img src="/images/dtu/vilnius.jpg" width="29%">
+<img src="/images/dtu/hagia.jpg" width="29%">
+<img src="/images/personal_anz_1.jpg" width="29%">
+<img src="/images/personal_anz_2.jpg" width="29%">
+<img src="/images/personal_anz_3.jpg" width="29%">
+<img src="/images/personal_iceland_1.jpg" width="29%">
+<img src="/images/personal_iceland_2.jpg" width="29%">
+<img src="/images/personal_iceland_3.jpg" width="29%">
 
 
-A <a href="https://jasonwei20.github.io/life_experiences/" style="color:navy">list</a> of my most transformative, memorable, or fun experiences. 
 
 
