change places i've been

--- a/_pages/personal.html
+++ b/_pages/personal.html
@@ -34,7 +34,7 @@ My favorite books are <i>Man's Search for Meaning</i> by Viktor Frankl, <i>The C
 
 <a href="https://jasonwei20.github.io/places_ive_been/" style="color:navy">Places</a> I've been to. 
 
-A <a href="https://jasonwei20.github.io/life_experiences/" style="color:navy">list</a> of my most transformative, memorable, or fun experiences. </br>
+A <a href="https://jasonwei20.github.io/life_experiences/" style="color:navy">list</a> of my most transformative, memorable, or fun experiences. <br>
 
 </br>
 </br>
