--- a/_pages/personal.html
+++ b/_pages/personal.html
@@ -27,7 +27,7 @@ I grew up in Herndon, Virginia. When visiting home, I enjoy playing <a href="htt
 <img src="/images/personal_4.jpg" width="22%">
 </br>
 </br>
-<a href="https://jasonwei20.github.io/places_ive_been/" style="color:navy">Places</a> I've been to. <br>
+<a href="https://jasonwei20.github.io/places_ive_been/" style="color:navy">Places</a> that I've been to. <br>
 <a href="https://jasonwei20.github.io/stuff_i_like/" style="color:navy">Stuff</a> that I like. <br>
 A <a href="https://jasonwei20.github.io/life_experiences/" style="color:navy">list</a> of my most transformative, memorable, or fun experiences.
 </br>
