--- a/_pages/blog_posts.html
+++ b/_pages/blog_posts.html
@@ -1,13 +1,12 @@
 ---
 layout: archive
 permalink: /blog_posts/
-title: "About Me"
+title: "Blog Posts"
 author_profile: true
 redirect_from:
   - /wordpress/blog-posts/
 ---
 
-<h1>Blog Posts</h1>
 Blog posts about my life, partially inspired by John Watson's blog from the Sherlock Holmes stories.
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
