--- a/_pages/blog_posts.html
+++ b/_pages/blog_posts.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-permalink: /blog_posts/
+permalink: /blog_posts_old/
 title: "Blog Posts"
 author_profile: true
 redirect_from:
